# coatglop

./: CMakeLists.txt
include/son8/: opengl-1_1.hxx  opengl-1_5.hxx  opengl-2_1.hxx  opengl-3_3-comp.hxx  opengl-3_3.hxx  opengl-4_3-comp.hxx  opengl-4_3.hxx  opengl.hxx
libs/: README.md
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
source/: coatglop.cxx
